--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,75 @@ body {
 .clip-triangle {
   clip-path: polygon(0 0, 100% 0, 50% 100%);
 }
+/* for peojects */
+@layer utilities {
+  @keyframes fadeInLeft {
+    from {
+      opacity: 0;
+      transform: translateX(-50px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+
+  @keyframes fadeInRight {
+    from {
+      opacity: 0;
+      transform: translateX(50px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+
+  .animate-fadeInLeft {
+    animation: fadeInLeft .3s ease-out forwards;
+  }
+
+  .animate-fadeInRight {
+    animation: fadeInRight .3s ease-out forwards;
+  }
+}
+
+/* for blogs */
+@keyframes slideIn {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.card {
+  animation: slideIn 0.5s ease-out forwards;
+  opacity: 0; /* Başlangıçta şəffaf olacaq */
+}
+
+.card:nth-child(1) {
+  animation-delay: 0s;
+}
+
+.card:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.card:nth-child(3) {
+  animation-delay: 0.3s;
+}
+.card:nth-child(4) {
+  animation-delay: 0.5s;
+}
+.card:nth-child(5) {
+  animation-delay: 0.7s;
+}
+.card:nth-child(6) {
+  animation-delay: 0.8s;
+}
+
+
